--- a/index.html
+++ b/index.html
@@ -14,25 +14,25 @@
         <h1 class="title">🥁Batera dos Rapazes🥁</h1>
         </header>
         <main class="main">
-            <button class="btn btn1">
+            <button class="btn a">
                 <span>A</span>
             </button>
-            <button class="btn btn2">
+            <button class="btn s">
                 <span>S</span>
             </button>
-            <button class="btn btn3">
+            <button class="btn d">
                 <span>D</span>
             </button>
-            <button class="btn btn4">
+            <button class="btn h">
                 <span>H</span>
             </button>
-            <button class="btn btn5">
+            <button class="btn j">
                 <span>J</span>
             </button>
-            <button class="btn btn6">
+            <button class="btn k">
                 <span>K</span>
             </button>
-            <button class="btn btn7">
+            <button class="btn l">
                 <span>L</span>
             </button>
         </main>
